--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+
   <dependencies>
       <dependency>
           <groupId>org.springframework.boot</groupId>
@@ -27,9 +28,21 @@
       </dependency>
 
       <dependency>
+          <groupId>org.springframework.hateoas</groupId>
+          <artifactId>spring-hateoas</artifactId>
+          <version>0.17.0.RELEASE</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
           <version>1.2.3.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.8.21</version>
       </dependency>
 
       <dependency>
