--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
           <artifactId>spring-boot-starter-web</artifactId>
           <version>1.2.3.RELEASE</version>
       </dependency>
+
       <dependency>
           <groupId>mysql</groupId>
           <artifactId>mysql-connector-java</artifactId>
@@ -40,6 +41,8 @@
           <version>6.8.21</version>
       </dependency>
 
+
+
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -53,4 +56,17 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
