--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,11 @@
           <version>6.8.21</version>
       </dependency>
 
-
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-hateoas</artifactId>
+          <version>1.2.3.RELEASE</version>
+      </dependency>
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
