--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource settings
-spring.datasource.url = jdbc:mysql://localhost:3306/timetable
-spring.datasource.username = root
-spring.datasource.password = Klapaucius
+spring.datasource.url = jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/${OPENSHIFT_APP_NAME}
+spring.datasource.username = ${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password = ${OPENSHIFT_MYSQL_DB_PASSWORD}
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 #Specify the DBMS
@@ -9,6 +9,10 @@ spring.jpa.database = MYSQL
 
 #Show or not log for each sql query
 spring.jpa.show-sql = true
+
+management.context-path=/manage
+
+spring.jpa.generate-ddl = true
 
 #Hibernate settings are prefixed with spring.jpa.hibernate
 spring.jpa.hibernate.ddl-auto = update
