--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,13 @@
   <dependencies>
       <dependency>
           <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-parent</artifactId>
+          <version>1.2.6.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
-          <version>1.2.3.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -32,7 +37,6 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
-          <version>1.2.3.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -53,6 +57,10 @@
           <version>1.2.3.RELEASE</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
