--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource settings
-spring.datasource.url = jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/${OPENSHIFT_APP_NAME}
-spring.datasource.username = ${OPENSHIFT_MYSQL_DB_USERNAME}
-spring.datasource.password = ${OPENSHIFT_MYSQL_DB_PASSWORD}
+spring.datasource.url: jdbc:mysql://${OPENSHIFT_MYSQL_DB_HOST}:${OPENSHIFT_MYSQL_DB_PORT}/${OPENSHIFT_APP_NAME}
+spring.datasource.username: ${OPENSHIFT_MYSQL_DB_USERNAME}
+spring.datasource.password: ${OPENSHIFT_MYSQL_DB_PASSWORD}
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 #Specify the DBMS
