--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
+          <version>1.2.6.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -37,6 +38,7 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
+          <version>1.2.6.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -60,6 +62,7 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-actuator</artifactId>
+          <version>1.2.6.RELEASE</version>
       </dependency>
     <dependency>
       <groupId>junit</groupId>
