--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-
-  <dependencies>
-      <dependency>
-          <groupId>org.springframework.boot</groupId>
+<parent>
+  <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-parent</artifactId>
           <version>1.2.6.RELEASE</version>
-      </dependency>
+</parent>
 
+  <dependencies>
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
@@ -36,7 +35,7 @@
 
 
       <dependency>
-          <groupId>org.springframework.boot</groupId>
+         <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
           <version>1.2.6.RELEASE</version>
       </dependency>
