--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-web</artifactId>
-          <version>1.2.6.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -37,7 +36,6 @@
       <dependency>
          <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-test</artifactId>
-          <version>1.2.6.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -49,19 +47,16 @@
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-hateoas</artifactId>
-          <version>1.2.3.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-data-jpa</artifactId>
-          <version>1.2.3.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-actuator</artifactId>
-          <version>1.2.6.RELEASE</version>
       </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -73,6 +68,10 @@
 
     <build>
         <plugins>
+          <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
